learn 线程同步等